rendered/envs/demo/flowise/deployment-flowise.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/instance: flowise
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flowise
    app.kubernetes.io/version: 2.0.7
    helm.sh/chart: flowise-3.10.2
  name: flowise
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: flowise
      app.kubernetes.io/name: flowise
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/secret: e89378e1938585ee2b47d700251ef87261f5cb48837669037072dcf6fc6452b7
      labels:
        app.kubernetes.io/instance: flowise
        app.kubernetes.io/name: flowise
    spec:
      containers:
        - env:
            - name: PORT
              value: "3000"
            - name: FLOWISE_USERNAME
              value: kbudde
            - name: FLOWISE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: flowise
            - name: APIKEY_PATH
              value: /data
            - name: BLOB_STORAGE_PATH
              value: /data/storage
            - name: SECRETKEY_PATH
              value: /data
            - name: DATABASE_PATH
              value: /data
            - name: DATABASE_TYPE
              value: postgres
            - name: DATABASE_HOST
              value: flow-psql-rw
            - name: DATABASE_PORT
              value: "5432"
            - name: DATABASE_USER
              value: app
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: flow-psql-app
            - name: DATABASE_NAME
              value: app
            - name: DISABLE_FLOWISE_TELEMETRY
              value: "true"
          image: docker.io/flowiseai/flowise:2.2.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: flowise
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          securityContext: {}
          volumeMounts:
            - mountPath: /data
              name: data
      securityContext: {}
      serviceAccountName: flowise
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: flowise
