rendered/envs/demo/flowise/service-flowise.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
  labels:
    app.kubernetes.io/instance: flowise
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: flowise
    app.kubernetes.io/version: 2.0.7
    helm.sh/chart: flowise-3.10.2
  name: flowise
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: flowise
    app.kubernetes.io/name: flowise
  sessionAffinity: None
  type: ClusterIP
