rendered/envs/demo/flowise/ingressroute-flowise.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    coroot.com/custom-application-name: flowise
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: flowise
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`flowise.demo.budd.ee`)
      priority: 10
      services:
        - name: flowise
          port: 3000
